--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <!-- font awesome cdn  -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-  <title>React App</title>
+  <title>Ema john</title>
 </head>
 
 <body>
